fixed inline list commands z-index

--- a/Resources/public/css/skins/bootstrap/skin.css
+++ b/Resources/public/css/skins/bootstrap/skin.css
@@ -681,7 +681,7 @@
   position: absolute;
   background-color: white;
   padding: 14px;
-  z-index: 5200;
+  z-index: 5300;
   border: 1px solid #525252;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
